# Laboratory

./: .gitignore  pom.xml
DesctopClient/: CMakeLists.txt  main.cpp  main.qrc
DesctopClient/include/gui/: mainwindow.h
DesctopClient/src/gui/: mainwindow.cpp
LicenseLibrary/go/: go.mod  go.sum  id_linux.go  id_windows.go  library.go  main.go  run.bat
MainService/: pom.xml
MainService/src/main/java/ru/ecodor/laboratory/: MainServiceApplication.java
MainService/src/main/java/ru/ecodor/laboratory/commons/: Constants.java
MainService/src/main/java/ru/ecodor/laboratory/configurations/: OpenApiConfig.java
MainService/src/main/java/ru/ecodor/laboratory/controllers/: LicenseConroller.java  MainController.java
MainService/src/main/java/ru/ecodor/laboratory/exceptions/: CreateLicenseFileException.java
MainService/src/main/java/ru/ecodor/laboratory/jna/: LicenseServiceLibrary.java
MainService/src/main/java/ru/ecodor/laboratory/services/: LicenseService.java
MainService/src/main/java/ru/ecodor/laboratory/services/impl/: LicenseServiceImpl.java
MainService/src/main/resources/: application.yml
MainService/src/test/java/ru/ecodor/laboratory/: MainServiceApplicationTest.java
MainService/src/test/java/ru/ecodor/laboratory/jna/impl/: LicenseServiceImplTest.java
